# eftProfiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_and_test.sh  build_from_singularity.sh  config.toml  job_script.sh  main.cpp  run.sh  run_from_singularity.sh  run_remote.sh  submit_nll_scan.sh  submit_np_suggestion.sh  submit_nps_by_name.sh  update.sh  update_from_singularity.sh  wrap_by_singularity.sh
Application/: Application.cpp  Application.h  CMakeLists.txt  FitManager.cpp  FitManager.h  FitManagerConfig.h  HesseStudyResult.cpp  HesseStudyResult.h  IFitManager.cpp  IFitManager.h  NpRankingStudyRes.cpp  NpRankingStudyRes.h  RankingPlotterSettings.h  RankingPlotterSettins.h
Application/FreeFit/: CMakeLists.txt  FreeFitManager.cpp  FreeFitManager.h
Application/NllScans/: CMakeLists.txt  Grid.cpp  Grid.h  NllScanManager.cpp  NllScanManager.h  NllScanPlotter.cpp  NllScanPlotter.h  NllScanPlotterSettings.cpp  NllScanPlotterSettings.h  NllScanResult.cpp  NllScanResult.h  NllScanResult_detail.h  PoiConfig.cpp  PoiConfig.h  PoiConfigBuilder.cpp  PoiConfigBuilder.h
Application/Ranking/: CorrelationStudyPlotSettings.cpp  CorrelationStudyPlotSettings.h  CorrelationStudyProcessor.cpp  CorrelationStudyProcessor.h  MissingNpsProcessor.cpp  MissingNpsProcessor.h  MissingNpsProcessorSettings.h  OneNpManager.cpp  OneNpManager.h  StudyRes.cpp  StudyRes.h
Core/: CMakeLists.txt  CmdLineArgs.cpp  CmdLineArgs.h  CommandLineArgs.cpp  CommandLineArgs.h  Core.cpp  Core.h  EfPreCompHeaders.cpp  EftRooFitPreCompHeaders.h  EftRootDrawingPreCompHeaders.h  EftStdPrecompHeaders.h  IFitManager.cpp  IFitManager.h  IWorksSpaceWrapper.h  IWorkspaceWrapper.h  Logger.cpp  Logger.h  Profiler.cpp  Profiler.h  ToRefact_FitManager.C  ToRefact_FitManager.h  ToRefact_WrapVars.cpp  ToRefact_WrapVars.h  ToRefactor_Catgories.h  ToRefactor_MuTypes.h  WorkspaceWrapper.cpp  WorkspaceWrapper.h
Fitter/: CMakeLists.txt  ErrorsReEvaluation.h  FitSettings.cpp  FitSettings.h  Fitter.cpp  Fitter.h  IFitResult.cpp  IFitResult.h  IFitter.h
Scripts/: extract_res_from_logs.py  find_failed_workers.sh
Test/: CMakeLists.txt  EftTests.h  FileSystemTester.cpp  TestColourUtils.cpp  TestCommandLineArguments.cpp  TestFitManager.cpp  TestPlotterUtils.cpp  TestPoiConfig.cpp  TestRooFit.cpp  TestScene.cpp  TestStringUtils.cpp  TestWorkspaceWrapper.cpp  Tester.cpp  Tester.h  test_runner.h
Utils/: CMakeLists.txt  ColourUtils.cpp  ColourUtils.h  FileSystemUtils.cpp  FileSystemUtils.h  FitUtils.cpp  FitUtils.h  NpRankingPlotter.cpp  NpRankingPlotter.h  PlotterUtils.cpp  PlotterUtils.h  RooVarUtils.cpp  RooVarUtils.h  Scene.cpp  Scene.h  StringUtils.cpp  StringUtils.h  WorkspaceUtils.cpp  WorkspaceUtils.h  WsPlotter.cpp  WsPlotter.h
Utils/Drawing/: Drawable.cpp  Drawable.h  Latex.cpp  Latex.h
Vendors/nlohmann_json/: ChangeLog.md
